# bupm

./: CHANGELOG.md  README.md  a.out  bupm.sln  bupm.vcxproj  meson.build
.cache/clangd/index/: about.cc.82BD220ABE458874.idx  about.h.D792011D70CB3FED.idx  fetch.cc.0253853EF05566BA.idx  fetch.h.87E4496AD4F02EEA.idx  help.cc.6F19D444A778B85D.idx  help.h.96550F9153DFC0BF.idx  install.cc.0D0C8166B8F48346.idx  install.h.8B56C84842534B5F.idx  main.cc.5EC8CF9BC7C0380B.idx  remove.cc.665AAA4690E50E80.idx  remove.h.037EAF0658537878.idx  repo.cc.90917A5347FD7E41.idx  repo.h.10E880198E4C1A70.idx
data/: bupm.pub  meson.build  repositories
doc/: bupm-fetch.1  bupm-install.1  bupm-repo.1  bupm.1  meson.build
include/: about.h  fetch.h  help.h  install.h  remove.h  repo.h
src/: .help.cc.swp  .install.c.swp  .main.cc.swp  about.cc  fetch.cc  help.cc  install.cc  main.cc  meson.build  remove.cc  repo.cc
